refactor(fullstack): fix writeJSON function to be more consistant and improve middleware to use context
